--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,8 +40,9 @@
     "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
     "baseUrl": ".",                       /* Base directory to resolve non-absolute module names. */
     "paths": {
-      "@pages": ["src/pages"],
-      "@components": ["src/components"]
+      "@screens": ["src/screens"],
+      "@components": ["src/components"],
+      "@redux": ["src/redux"]
     },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
